# HorizonEngine3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  vcpkg-configuration.json  vcpkg.json
HorizonEditor/: AssetUITool.cpp  AssetUITool.h  CMakeLists.txt  EditorCameraTool.cpp  EditorCameraTool.h  EditorMenu.cpp  EditorMenu.h  EditorUI.cpp  EditorUI.h  EditorUITool.h  Entrypoint.cpp  GameLayer.cpp  GameLayer.h  HorizonEditor.cpp  HorizonEditor.h  ImGuiDemoWindowTool.h  Variants.h
HorizonEditor/resources/shaders/: shader.frag  shader.vert  texture_shader.frag  texture_shader.vert
HorizonEngine/: CMakeLists.txt
HorizonEngine/include/HorizonEngine/: App.h  Buffer.h  Camera.h  CameraController.h  Input.h  KeyCodes.h  Layer.h  MouseCodes.h  Platform.h  RendererAPI.h  Shader.h  Texture.h  Utility.h  VertexArray.h  Window.h
HorizonEngine/src/: App.cpp  Buffer.cpp  Input.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  Utility.cpp  VertexArray.cpp  Window.cpp
HorizonEngine/src/Platform/: WindowsOS.cpp  WindowsOS.h
